# github-autobot

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
github_autobot/: __init__.py  __main__.py  cli.py  core.py  journal.py
github_autobot/tasks/: __init__.py
tests/: test_smoke.py
